--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ crossbeam-utils = "0.8.3"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 nannou = { version = "0.15.0", features = ["default", "notosans"] }
+
+#[profile.release]
+#lto = "fat"
+#codegen-units = 1
+#panic = "abort"
