--- a/rusty_visualizer_raylib/Cargo.toml
+++ b/rusty_visualizer_raylib/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
 raylib = "3.5.0"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0.64"
