--- a/rusty_visualizer_raylib/Cargo.toml
+++ b/rusty_visualizer_raylib/Cargo.toml
@@ -11,3 +11,4 @@ rusty_visualizer_core = { path = "../rusty_visualizer_core" }
 raylib = "3.5.0"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
+rayui = { git = "https://github.com/Ricky12Awesome/rayui.git" }
