--- a/rusty_visualizer_piston/Cargo.toml
+++ b/rusty_visualizer_piston/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "rusty_visualizer_raylib"
+name = "rusty_visualizer_piston"
 version = "0.1.0"
-authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+piston_window = "^0.*"
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
-raylib = "3.5.0"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
-rayui = { git = "https://github.com/Ricky12Awesome/rayui.git" }
-egui_glfw_gl = "0.13.1"
