--- a/rusty_visualizer_core/Cargo.toml
+++ b/rusty_visualizer_core/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cpal = "0.13.2"
-num-complex = "0.4.0"
-num-traits = "0.2.14"
-crossbeam-utils = "0.8.3"
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
+cpal = "^0.13"
+num-complex = "^0.4"
+num-traits = "^0.2"
+crossbeam-utils = "^0.8"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
