--- a/rusty_visualizer_egui/Cargo.toml
+++ b/rusty_visualizer_egui/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = "0.14.0"
+eframe = "^0.14"
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
