--- a/rusty_visualizer_macroquad/Cargo.toml
+++ b/rusty_visualizer_macroquad/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-name = "rusty_visualizer_raylib"
+name = "rusty_visualizer_macroquad"
 version = "0.1.0"
-authors = ["Ricky12Awesome <rickygraveen@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+macroquad = "^0.3"
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
-raylib = "^3"
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
-rayui = { git = "https://github.com/Ricky12Awesome/rayui.git" }
