--- a/rusty_visualizer_piston/Cargo.toml
+++ b/rusty_visualizer_piston/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 [dependencies]
 piston_window = "^0.*"
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
