--- a/rusty_visualizer_macroquad/Cargo.toml
+++ b/rusty_visualizer_macroquad/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 
 [dependencies]
 macroquad = "^0.3"
+egui-macroquad = "^0.6"
+egui = "^0.14"
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
