--- a/rusty_visualizer_core/Cargo.toml
+++ b/rusty_visualizer_core/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cpal = "^0.13"
+cpal = "0.13.4"
 num-complex = "^0.4"
 num-traits = "^0.2"
 crossbeam-utils = "^0.8"
