--- a/rusty_visualizer_macroquad/Cargo.toml
+++ b/rusty_visualizer_macroquad/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-macroquad = "^0.3"
-egui-macroquad = "^0.6"
-egui = "^0.14"
+macroquad = { version = "^0.3", default-features = false } # Disable Audio
+egui-macroquad = "0.6.1" # I need to disable audio for this, but can't
+egui = "0.14.2" # Needs to be 0.14, 0.15 since it breaks depend above
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
