--- a/rusty_visualizer_macroquad/Cargo.toml
+++ b/rusty_visualizer_macroquad/Cargo.toml
@@ -12,3 +12,7 @@ egui = "0.14.2" # Needs to be 0.14, 0.15 since it breaks depend above
 rusty_visualizer_core = { path = "../rusty_visualizer_core" }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
+reqwest = { version = "0.11.8", features = ["blocking"] }
+image = "0.23.14"
+spotify_info = "0.3"
+tokio = { version = "1.15", features = ["full"] }
