--- a/rusty_visualizer_macroquad/Cargo.toml
+++ b/rusty_visualizer_macroquad/Cargo.toml
@@ -17,3 +17,4 @@ reqwest = { version = "0.11.8", features = ["blocking"] }
 image = "0.23.14"
 spotify_info = "0.3"
 tokio = { version = "1.15", features = ["full"] }
+lazy_static = "1.4.0"
